# coding-interview

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/src/: __init__.py  celery_tasks.py  config.py  errors.py
backend/src/auth/: dependencies.py  routes.py  schemas.py  service.py  utils.py
backend/src/coding_interview_generator/: challenge.py  prompts.py  routes.py  schemas.py  service.py  utils.py
backend/src/databases/: main.py  models.py  redis.py
backend/src/utils/: mail.py
frontend/coding-interview/: index.html  package-lock.json  package.json
frontend/coding-interview/src/: App.css  App.jsx  index.css  main.jsx
frontend/coding-interview/src/components/: Body.css  Body.jsx  ChallengeQuestion.css  ChallengeQuestionBody.jsx  ChallengeQuestions.css  ChallengeQuestions.jsx  Header.css  Header.jsx  History.css  History.jsx  HomePage.jsx  LoginPage.css  LoginPage.jsx  Profile.css  Profile.jsx  Signout.css  Signout.jsx  SignupPage.css  SignupPage.jsx
frontend/coding-interview/src/pages/history/: History.css  History.jsx
frontend/coding-interview/src/pages/home/: Body.css  Body.jsx  HomePage.jsx
frontend/coding-interview/src/pages/login/: LoginPage.css  LoginPage.jsx
frontend/coding-interview/src/pages/signup/: SignupPage.css  SignupPage.jsx
frontend/coding-interview/src/utils/: API.js  apiRequests.js  loginRequest.js  resetTime.js
src/: celery_tasks.py  config.py  errors.py
src/auth/: dependencies.py  routes.py  service.py  utils.py
src/coding_interview_generator/: __init__.py
src/databases/: main.py  models.py
