[project]
name = "coding-interview-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nnaemeka Nwankwo", email = "codebasetwo@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "asgiref>=3.9.2",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "fastapi-mail>=1.5.0",
    "fastapi[standard]>=0.117.1",
    "itsdangerous>=2.2.0",
    "openai>=1.109.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "redis>=6.4.0",
    "sqlmodel>=0.0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
